yaps/stanParser.py
# Generated from yaps/stan.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class stanParser ( Parser ):

    grammarFileName = "stan.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "'include'", "'.'", "','", "';'", 
                     "'['", "']'", "'{'", "'}'", "'('", "')'", "'|'", "'?'", 
                     "':'", "'<-'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'for'", "'in'", 
                     "'while'", "'repeat'", "'until'", "'if'", "'then'", 
                     "'else'", "'true'", "'false'", "'int'", "'real'", "'vector'", 
                     "'simplex'", "'ordered'", "'positive_ordered'", "'row_vector'", 
                     "'unit_vector'", "'matrix'", "'cholesky_factor_corr'", 
                     "'cholesky_factor_cov'", "'corr_matrix'", "'cov_matrix'", 
                     "'functions'", "'model'", "'data'", "'parameters'", 
                     "'quantities'", "'transformed'", "'generated'", "'var'", 
                     "'fvar'", "'STAN_MAJOR'", "'STAN_MINOR'", "'STAN_PATCH'", 
                     "'STAN_MATH_MAJOR'", "'STAN_MATH_MINOR'", "'STAN_MATH_PATCH'", 
                     "'alignas'", "'alignof'", "'and'", "'and_eq'", "'asm'", 
                     "'auto'", "'bitand'", "'bitor'", "'bool'", "'break'", 
                     "'case'", "'catch'", "'char'", "'char16_t'", "'char32_t'", 
                     "'class'", "'compl'", "'const'", "'constexpr'", "'const_cast'", 
                     "'continue'", "'decltype'", "'default'", "'delete'", 
                     "'do'", "'double'", "'dynamic_cast'", "'enum'", "'explicit'", 
                     "'export'", "'extern'", "'float'", "'friend'", "'goto'", 
                     "'inline'", "'long'", "'mutable'", "'namespace'", "'new'", 
                     "'noexcept'", "'not'", "'not_eq'", "'nullptr'", "'operator'", 
                     "'or'", "'or_eq'", "'private'", "'protected'", "'public'", 
                     "'register'", "'reinterpret_cast'", "'return'", "'short'", 
                     "'signed'", "'sizeof'", "'static'", "'static_assert'", 
                     "'static_cast'", "'struct'", "'switch'", "'template'", 
                     "'this'", "'thread_local'", "'throw'", "'try'", "'typedef'", 
                     "'typeid'", "'typename'", "'union'", "'unsigned'", 
                     "'using'", "'virtual'", "'void'", "'volatile'", "'wchar_t'", 
                     "'xor'", "'xor_eq'", "<INVALID>", "<INVALID>", "'||'", 
                     "'&&'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'\\'", "'.*'", 
                     "'./'", "'!'", "'^'", "'''", "'~'", "'='", "'+='", 
                     "'-='", "'*='", "'/='", "'.*='", "'./='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "COMMENT", "LINE_COMMENT", "WS", "IntegerLiteral", 
                      "RealLiteral", "StringLiteral", "FOR", "IN", "WHILE", 
                      "REPEAT", "UNTIL", "IF", "THEN", "ELSE", "TRUE", "FALSE", 
                      "INT", "REAL", "VECTOR", "SIMPLEX", "ORDERED", "POSITIVE_ORDERED", 
                      "ROW_VECTOR", "UNIT_VECTOR", "MATRIX", "CHOLESKY_FACTOR_CORR", 
                      "CHOLESKY_FACTOR_COV", "CORR_MATRIX", "COV_MATRIX", 
                      "FUNCTIONS", "MODEL", "DATA", "PARAMETERS", "QUANTITIES", 
                      "TRANSFORMED", "GENERATED", "VAR", "FVAR", "STAN_MAJOR", 
                      "STAN_MINOR", "STAN_PATCH", "STAN_MATH_MAJOR", "STAN_MATH_MINOR", 
                      "STAN_MATH_PATCH", "ALIGNAS", "ALIGNOF", "AND", "AND_EQ", 
                      "ASM", "AUTO", "BITAND", "BITOR", "BOOL", "BREAK", 
                      "CASE", "CATCH", "CHAR", "CHAR16_T", "CHAR32_T", "CLASS", 
                      "COMPL", "CONST", "CONSTEXPR", "CONST_CAST", "CONTINUE", 
                      "DECLTYPE", "DEFAULT", "DELETE", "DO", "DOUBLE", "DYNAMIC_CAST", 
                      "ENUM", "EXPLICIT", "EXPORT", "EXTERN", "FLOAT", "FRIEND", 
                      "GOTO", "INLINE", "LONG", "MUTABLE", "NAMESPACE", 
                      "NEW", "NOEXCEPT", "NOT", "NOT_EQ", "NULLPTR", "OPERATOR", 
                      "OR", "OR_EQ", "PRIVATE", "PROTECTED", "PUBLIC", "REGISTER", 
                      "REINTERPRET_CAST", "RETURN", "SHORT", "SIGNED", "SIZEOF", 
                      "STATIC", "STATIC_ASSERT", "STATIC_CAST", "STRUCT", 
                      "SWITCH", "TEMPLATE", "THIS", "THREAD_LOCAL", "THROW", 
                      "TRY", "TYPEDEF", "TYPEID", "TYPENAME", "UNION", "UNSIGNED", 
                      "USING", "VIRTUAL", "VOID", "VOLATILE", "WCHAR_T", 
                      "XOR", "XOR_EQ", "BAD_IDENTIFIER", "IDENTIFIER", "OR_OP", 
                      "AND_OP", "EQ_OP", "NEQ_OP", "LT_OP", "LE_OP", "GT_OP", 
                      "GE_OP", "PLUS_OP", "MINUS_OP", "MULT_OP", "DIV_OP", 
                      "MOD_OP", "LEFT_DIV_OP", "DOT_MULT_OP", "DOT_DIV_OP", 
                      "NOT_OP", "POW_OP", "TRANSPOSE_OP", "SAMPLE", "EQ", 
                      "PLUS_EQ", "MINUS_EQ", "MULT_EQ", "DIV_EQ", "DOT_MULT_EQ", 
                      "DOT_DIV_EQ" ]

    RULE_include = 0
    RULE_primitiveType = 1
    RULE_vectorType = 2
    RULE_matrixType = 3
    RULE_type_ = 4
    RULE_typeConstraints = 5
    RULE_typeConstraintList = 6
    RULE_typeConstraint = 7
    RULE_variableDecl = 8
    RULE_arrayDim = 9
    RULE_commaListOpt = 10
    RULE_variableDeclsOpt = 11
    RULE_constant = 12
    RULE_variable = 13
    RULE_vectorExpr = 14
    RULE_arrayExpr = 15
    RULE_atom = 16
    RULE_callExpr = 17
    RULE_expression = 18
    RULE_constraintExpression = 19
    RULE_indexExpression = 20
    RULE_expressionCommaList = 21
    RULE_expressionCommaListOpt = 22
    RULE_indexExpressionCommaListOpt = 23
    RULE_lvalue = 24
    RULE_assignStmt = 25
    RULE_truncation = 26
    RULE_forStmt = 27
    RULE_conditionalStmt = 28
    RULE_whileStmt = 29
    RULE_blockStmt = 30
    RULE_callStmt = 31
    RULE_expressionOrString = 32
    RULE_expressionOrStringCommaList = 33
    RULE_statement = 34
    RULE_statementsOpt = 35
    RULE_functionDecl = 36
    RULE_unsizedReturnType = 37
    RULE_unsizedType = 38
    RULE_basicType = 39
    RULE_unsizedDims = 40
    RULE_parameterDecl = 41
    RULE_parameterCommaList = 42
    RULE_parameterCommaListOpt = 43
    RULE_returnStmt = 44
    RULE_functionDeclsOpt = 45
    RULE_functionBlock = 46
    RULE_dataBlock = 47
    RULE_transformedDataBlock = 48
    RULE_parametersBlock = 49
    RULE_transformedParametersBlock = 50
    RULE_modelBlock = 51
    RULE_generatedQuantitiesBlock = 52
    RULE_program = 53

    ruleNames =  [ "include", "primitiveType", "vectorType", "matrixType", 
                   "type_", "typeConstraints", "typeConstraintList", "typeConstraint", 
                   "variableDecl", "arrayDim", "commaListOpt", "variableDeclsOpt", 
                   "constant", "variable", "vectorExpr", "arrayExpr", "atom", 
                   "callExpr", "expression", "constraintExpression", "indexExpression", 
                   "expressionCommaList", "expressionCommaListOpt", "indexExpressionCommaListOpt", 
                   "lvalue", "assignStmt", "truncation", "forStmt", "conditionalStmt", 
                   "whileStmt", "blockStmt", "callStmt", "expressionOrString", 
                   "expressionOrStringCommaList", "statement", "statementsOpt", 
                   "functionDecl", "unsizedReturnType", "unsizedType", "basicType", 
                   "unsizedDims", "parameterDecl", "parameterCommaList", 
                   "parameterCommaListOpt", "returnStmt", "functionDeclsOpt", 
                   "functionBlock", "dataBlock", "transformedDataBlock", 
                   "parametersBlock", "transformedParametersBlock", "modelBlock", 
                   "generatedQuantitiesBlock", "program" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    COMMENT=16
    LINE_COMMENT=17
    WS=18
    IntegerLiteral=19
    RealLiteral=20
    StringLiteral=21
    FOR=22
    IN=23
    WHILE=24
    REPEAT=25
    UNTIL=26
    IF=27
    THEN=28
    ELSE=29
    TRUE=30
    FALSE=31
    INT=32
    REAL=33
    VECTOR=34
    SIMPLEX=35
    ORDERED=36
    POSITIVE_ORDERED=37
    ROW_VECTOR=38
    UNIT_VECTOR=39
    MATRIX=40
    CHOLESKY_FACTOR_CORR=41
    CHOLESKY_FACTOR_COV=42
    CORR_MATRIX=43
    COV_MATRIX=44
    FUNCTIONS=45
    MODEL=46
    DATA=47
    PARAMETERS=48
    QUANTITIES=49
    TRANSFORMED=50
    GENERATED=51
    VAR=52
    FVAR=53
    STAN_MAJOR=54
    STAN_MINOR=55
    STAN_PATCH=56
    STAN_MATH_MAJOR=57
    STAN_MATH_MINOR=58
    STAN_MATH_PATCH=59
    ALIGNAS=60
    ALIGNOF=61
    AND=62
    AND_EQ=63
    ASM=64
    AUTO=65
    BITAND=66
    BITOR=67
    BOOL=68
    BREAK=69
    CASE=70
    CATCH=71
    CHAR=72
    CHAR16_T=73
    CHAR32_T=74
    CLASS=75
    COMPL=76
    CONST=77
    CONSTEXPR=78
    CONST_CAST=79
    CONTINUE=80
    DECLTYPE=81
    DEFAULT=82
    DELETE=83
    DO=84
    DOUBLE=85
    DYNAMIC_CAST=86
    ENUM=87
    EXPLICIT=88
    EXPORT=89
    EXTERN=90
    FLOAT=91
    FRIEND=92
    GOTO=93
    INLINE=94
    LONG=95
    MUTABLE=96
    NAMESPACE=97
    NEW=98
    NOEXCEPT=99
    NOT=100
    NOT_EQ=101
    NULLPTR=102
    OPERATOR=103
    OR=104
    OR_EQ=105
    PRIVATE=106
    PROTECTED=107
    PUBLIC=108
    REGISTER=109
    REINTERPRET_CAST=110
    RETURN=111
    SHORT=112
    SIGNED=113
    SIZEOF=114
    STATIC=115
    STATIC_ASSERT=116
    STATIC_CAST=117
    STRUCT=118
    SWITCH=119
    TEMPLATE=120
    THIS=121
    THREAD_LOCAL=122
    THROW=123
    TRY=124
    TYPEDEF=125
    TYPEID=126
    TYPENAME=127
    UNION=128
    UNSIGNED=129
    USING=130
    VIRTUAL=131
    VOID=132
    VOLATILE=133
    WCHAR_T=134
    XOR=135
    XOR_EQ=136
    BAD_IDENTIFIER=137
    IDENTIFIER=138
    OR_OP=139
    AND_OP=140
    EQ_OP=141
    NEQ_OP=142
    LT_OP=143
    LE_OP=144
    GT_OP=145
    GE_OP=146
    PLUS_OP=147
    MINUS_OP=148
    MULT_OP=149
    DIV_OP=150
    MOD_OP=151
    LEFT_DIV_OP=152
    DOT_MULT_OP=153
    DOT_DIV_OP=154
    NOT_OP=155
    POW_OP=156
    TRANSPOSE_OP=157
    SAMPLE=158
    EQ=159
    PLUS_EQ=160
    MINUS_EQ=161
    MULT_EQ=162
    DIV_EQ=163
    DOT_MULT_EQ=164
    DOT_DIV_EQ=165

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(stanParser.IDENTIFIER)
            else:
                return self.getToken(stanParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return stanParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)




    def include(self):

        localctx = stanParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(stanParser.T__0)
            self.state = 109
            self.match(stanParser.T__1)
            self.state = 110
            self.match(stanParser.IDENTIFIER)
            self.state = 111
            self.match(stanParser.T__2)
            self.state = 112
            self.match(stanParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimitiveTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REAL(self):
            return self.getToken(stanParser.REAL, 0)

        def INT(self):
            return self.getToken(stanParser.INT, 0)

        def getRuleIndex(self):
            return stanParser.RULE_primitiveType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveType" ):
                listener.enterPrimitiveType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveType" ):
                listener.exitPrimitiveType(self)




    def primitiveType(self):

        localctx = stanParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not(_la==stanParser.INT or _la==stanParser.REAL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VectorTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VECTOR(self):
            return self.getToken(stanParser.VECTOR, 0)

        def SIMPLEX(self):
            return self.getToken(stanParser.SIMPLEX, 0)

        def UNIT_VECTOR(self):
            return self.getToken(stanParser.UNIT_VECTOR, 0)

        def ORDERED(self):
            return self.getToken(stanParser.ORDERED, 0)

        def POSITIVE_ORDERED(self):
            return self.getToken(stanParser.POSITIVE_ORDERED, 0)

        def ROW_VECTOR(self):
            return self.getToken(stanParser.ROW_VECTOR, 0)

        def getRuleIndex(self):
            return stanParser.RULE_vectorType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVectorType" ):
                listener.enterVectorType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVectorType" ):
                listener.exitVectorType(self)




    def vectorType(self):

        localctx = stanParser.VectorTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vectorType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << stanParser.VECTOR) | (1 << stanParser.SIMPLEX) | (1 << stanParser.ORDERED) | (1 << stanParser.POSITIVE_ORDERED) | (1 << stanParser.ROW_VECTOR) | (1 << stanParser.UNIT_VECTOR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MatrixTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATRIX(self):
            return self.getToken(stanParser.MATRIX, 0)

        def CORR_MATRIX(self):
            return self.getToken(stanParser.CORR_MATRIX, 0)

        def COV_MATRIX(self):
            return self.getToken(stanParser.COV_MATRIX, 0)

        def CHOLESKY_FACTOR_COV(self):
            return self.getToken(stanParser.CHOLESKY_FACTOR_COV, 0)

        def CHOLESKY_FACTOR_CORR(self):
            return self.getToken(stanParser.CHOLESKY_FACTOR_CORR, 0)

        def getRuleIndex(self):
            return stanParser.RULE_matrixType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixType" ):
                listener.enterMatrixType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixType" ):
                listener.exitMatrixType(self)




    def matrixType(self):

        localctx = stanParser.MatrixTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_matrixType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << stanParser.MATRIX) | (1 << stanParser.CHOLESKY_FACTOR_CORR) | (1 << stanParser.CHOLESKY_FACTOR_COV) | (1 << stanParser.CORR_MATRIX) | (1 << stanParser.COV_MATRIX))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(stanParser.PrimitiveTypeContext,0)


        def typeConstraints(self):
            return self.getTypedRuleContext(stanParser.TypeConstraintsContext,0)


        def arrayDim(self):
            return self.getTypedRuleContext(stanParser.ArrayDimContext,0)


        def vectorType(self):
            return self.getTypedRuleContext(stanParser.VectorTypeContext,0)


        def matrixType(self):
            return self.getTypedRuleContext(stanParser.MatrixTypeContext,0)


        def getRuleIndex(self):
            return stanParser.RULE_type_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_" ):
                listener.enterType_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_" ):
                listener.exitType_(self)




    def type_(self):
